<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/jogador1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/jogador_1" />

        <TextView
            android:id="@+id/placar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="left"
            android:text="@string/placar1"
            android:textAlignment="textEnd"
            tools:text="0" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal_700" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="41dp">

        <TextView
            android:id="@+id/jogador2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/jogador_2" />

        <TextView
            android:id="@+id/placar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/placar1"
            android:textAlignment="textEnd"
            tools:text="0" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_00"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="#2196F3"
                android:textSize="60sp" />

            <Button
                android:id="@+id/bt_01"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="#2196F3"
                android:textSize="60sp" />

            <Button
                android:id="@+id/bt_02"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="#2196F3"
                android:textSize="60sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_10"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="#2196F3"
                android:textSize="60sp" />

            <Button
                android:id="@+id/bt_11"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="#2196F3"
                android:textSize="60sp" />

            <Button
                android:id="@+id/bt_12"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="#2196F3"
                android:textSize="60sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_20"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="#2196F3"
                android:textSize="60sp" />

            <Button
                android:id="@+id/bt_21"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="#2196F3"
                android:textSize="60sp" />

            <Button
                android:id="@+id/bt_22"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="#2196F3"
                android:textSize="60sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/Velhas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Velhas" />

        <TextView
            android:id="@+id/placarVelha"
            android:layout_width="19dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/placar1"
            android:textAlignment="textEnd"
            tools:text="0" />
    </LinearLayout>

</LinearLayout>
